recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:13: error: not found: value faie_carre
  faie_carre
  ^