recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  
  def faire_carre(){
    for (i<-0 to 3){
      avance(100.0)
      droite(90.0)
    }  
  }
  
  faire_carre()
  droite(90.0)
  avance(100.0)
  faie_carre

}